Added the configuration files for the server

--- a/services-tnrs/src/main/resources/tnrs_standalone.properties
+++ b/services-tnrs/src/main/resources/tnrs_standalone.properties
@@ -1,2 +1,2 @@
-org.iplantc.tnrs.taxamatchurl=http://testbed235.iplantc.org/taxamatch-webservice-read-only/api/taxamatch.php
-org.iplantc.tnrs.hosturl=http://testbed235.iplantc.org/tnrsm-svc/
+org.iplantc.tnrs.taxamatchurl=http://vm142-41.iplantc.org/taxamatch-webservice-read-only/api/taxamatch.php
+org.iplantc.tnrs.hosturl=http://vm142-41.iplantc.org/tnrsm-svc/
