Upgraded to tnrs3_db_scripts_3.5.4; fixed error in workers.properties

--- a/config/workers.properties
+++ b/config/workers.properties
@@ -1,4 +1,5 @@
-s file provides minimal jk configuration properties needed to
+#
+# This file provides minimal jk configuration properties needed to
 # connect to Tomcat.
 #
 # The workers that jk should create and work with
