--- a/tnrs-services/src/main/resources/tnrs.properties
+++ b/tnrs-services/src/main/resources/tnrs.properties
@@ -1,2 +1,2 @@
-org.iplantc.tnrs.taxamatchurl=http://vm142-83.iplantcollaborative.org/taxamatch-webservice-read-only/api/taxamatch.php
-org.iplantc.tnrs.hosturl=http://vm142-83.iplantcollaborative.org/tnrs-standalone/
+org.iplantc.tnrs.taxamatchurl=http://localhost/taxamatch-webservice-read-only/api/taxamatch.php
+org.iplantc.tnrs.hosturl=http://localhost/tnrs-standalone/
