--- a/tnrs-standalone/pom.xml
+++ b/tnrs-standalone/pom.xml
@@ -15,7 +15,7 @@
 		<!-- Current GWT Version -->
 		<gwt.version>2.4.0</gwt.version>
 		<!-- Current ExtGWT Version -->
-		<gxt.version>2.2.4</gxt.version>
+		<gxt.version>2.2.5</gxt.version>
 		<!-- Define OS/Platform Independent Character Encoding -->
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
@@ -57,11 +57,11 @@
 			<artifactId>gwtupload</artifactId>
 			<version>0.5.5</version>
 		</dependency>
-		<dependency>
-			<groupId>com.extjs</groupId>
-			<artifactId>gxt</artifactId>
-			<version>${gxt.version}</version>
-		</dependency>
+        <dependency>
+            <groupId>com.extjs</groupId>
+            <artifactId>gxt</artifactId>
+            <version>${gxt.version}</version>
+        </dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
@@ -146,6 +146,7 @@
 			</plugin>
 		</plugins>
 	</build>
+
 	<repositories>
 		<repository>
 			<id>gwt-maven</id>
@@ -157,7 +158,15 @@
 			<url>http://projects.iplantcollaborative.org/archiva/repository/internal/
 			</url>
 		</repository>
-	</repositories>
+    </repositories>
+
+    <distributionManagement>
+        <snapshotRepository>
+            <id>iplantCollaborative</id>
+            <name>iPlant Collaborative Local Repository</name>
+            <url>http://katic.iplantcollaborative.org/archiva/repository/internal/</url>
+        </snapshotRepository>
+    </distributionManagement>
 
 	<reporting>
 		<plugins>
